[gd_scene load_steps=37 format=3 uid="uid://be3mefyo6c38a"]

[ext_resource type="Script" path="res://scripts/Start/Start.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://d267mpawqf7ih" path="res://scenes/Background.tscn" id="2"]
[ext_resource type="FontFile" uid="uid://biaww0wupnugk" path="res://fonts/good times rg.ttf" id="3"]
[ext_resource type="Theme" uid="uid://ck1yusat33fmo" path="res://main_theme.tres" id="3_1gbg4"]
[ext_resource type="PackedScene" uid="uid://bb3c85x0ng3sf" path="res://scenes/ModeButton.tscn" id="5"]
[ext_resource type="Script" path="res://scripts/Start/sideBoard.gd" id="7"]
[ext_resource type="Script" path="res://scripts/IconButton.gd" id="8"]
[ext_resource type="Texture2D" uid="uid://dw2afprqfmn1t" path="res://textures/white/outline_settings_white_48dp.png" id="9"]
[ext_resource type="Texture2D" uid="uid://bqk8j6veiptl" path="res://textures/black/outline_settings_black_48dp.png" id="10"]
[ext_resource type="Script" path="res://scripts/Start/settingsContainer.gd" id="11"]
[ext_resource type="Theme" uid="uid://b02kqhknpk8mq" path="res://themes/sideBoardTheme.tres" id="12"]
[ext_resource type="Texture2D" uid="uid://xewci5y08fpe" path="res://textures/whiteProgress.jpg" id="13"]
[ext_resource type="Script" path="res://scripts/Start/Restart.gd" id="15"]

[sub_resource type="Animation" id="3"]
resource_name = "blend"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.392157)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w0tpi"]
_data = {
"blend": SubResource("3")
}

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("3")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/90/0/ascent = 0.0
cache/0/90/0/descent = 0.0
cache/0/90/0/underline_position = 0.0
cache/0/90/0/underline_thickness = 0.0
cache/0/90/0/scale = 1.0
cache/0/90/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/90/0/kerning_overrides/42/0 = Vector2(0, 0)
cache/0/42/0/ascent = 0.0
cache/0/42/0/descent = 0.0
cache/0/42/0/underline_position = 0.0
cache/0/42/0/underline_thickness = 0.0
cache/0/42/0/scale = 1.0
cache/0/42/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/42/0/kerning_overrides/90/0 = Vector2(0, 0)
cache/0/42/0/kerning_overrides/42/0 = Vector2(0, 0)

[sub_resource type="Animation" id="5"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("icon:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("9"), ExtResource("10")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a8nem"]
_data = {
"anim": SubResource("5")
}

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(348, 540)

[sub_resource type="Animation" id="Animation_07oor"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Splash:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Main/playButtons:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1qa2u"]
resource_name = "fade_black"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="10"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Splash/info:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Main:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Splash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Main/playButtons:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v8ojb"]
_data = {
"RESET": SubResource("Animation_07oor"),
"fade_black": SubResource("Animation_1qa2u"),
"switch": SubResource("10")
}

[sub_resource type="StyleBoxEmpty" id="16"]

[sub_resource type="StyleBoxEmpty" id="12"]

[sub_resource type="StyleBoxEmpty" id="13"]

[sub_resource type="StyleBoxEmpty" id="15"]

[sub_resource type="StyleBoxEmpty" id="14"]

[sub_resource type="Shortcut" id="19"]

[sub_resource type="StyleBoxEmpty" id="20"]

[sub_resource type="StyleBoxEmpty" id="21"]

[sub_resource type="StyleBoxEmpty" id="23"]

[sub_resource type="StyleBoxEmpty" id="22"]

[sub_resource type="Shortcut" id="25"]

[sub_resource type="Animation" id="26"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qdp46"]
_data = {
"fade_in": SubResource("26")
}

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(922, 789)
script = ExtResource("1")
metadata/_edit_lock_ = true

[node name="Background2" parent="." instance=ExtResource("2")]
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="Label" parent="."]
layout_mode = 0
anchor_right = 1.0
offset_top = 180.0
offset_bottom = 335.0
pivot_offset = Vector2(960, 77)
theme = ExtResource("3_1gbg4")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 100
text = "Karambolage"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Splash" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
pivot_offset = Vector2(922, 789)
metadata/_edit_lock_ = true

[node name="info" type="Label" parent="Splash"]
layout_mode = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -29.0
offset_bottom = 29.0
pivot_offset = Vector2(106, 119)
theme = ExtResource("3_1gbg4")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "PRESS [ENTER] TO START"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="animPlayer" type="AnimationPlayer" parent="Splash/info"]
autoplay = "blend"
libraries = {
"": SubResource("AnimationLibrary_w0tpi")
}

[node name="Main" type="Control" parent="."]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
metadata/_edit_lock_ = true

[node name="title" type="Label" parent="Main"]
visible = false
layout_mode = 0
anchor_right = 1.0
offset_left = 18.1051
offset_top = 3.95336
offset_right = -1495.89
offset_bottom = 52.9534
pivot_offset = Vector2(960, 77)
theme = ExtResource("3_1gbg4")
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_fonts/font = SubResource("4")
text = "Karambolage"

[node name="playButtons" type="HBoxContainer" parent="Main"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 248.0
offset_bottom = 378.0
alignment = 1

[node name="btnPlay" parent="Main/playButtons" instance=ExtResource("5")]
layout_mode = 2
description = "Normal"

[node name="btnPlayFast" parent="Main/playButtons" instance=ExtResource("5")]
layout_mode = 2
description = "Fast"
mode = 2

[node name="btnCave" parent="Main/playButtons" instance=ExtResource("5")]
layout_mode = 2
description = "Cave"
mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="Main"]
visible = false

[node name="sideBoard" type="Control" parent="Main/CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 1920.0
offset_right = 2420.0
offset_bottom = 1080.0
script = ExtResource("7")
swipeTime = 0.7

[node name="ColorRect" type="ColorRect" parent="Main/CanvasLayer/sideBoard"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 150.0
color = Color(0, 0, 0, 0.588235)

[node name="btnSettings" type="Control" parent="Main/CanvasLayer/sideBoard"]
anchors_preset = 0
offset_left = -70.0
offset_bottom = 70.0
pivot_offset = Vector2(35, 35)
mouse_filter = 1
script = ExtResource("8")

[node name="animPlayer" type="AnimationPlayer" parent="Main/CanvasLayer/sideBoard/btnSettings"]
libraries = {
"": SubResource("AnimationLibrary_a8nem")
}

[node name="icon" type="TextureRect" parent="Main/CanvasLayer/sideBoard/btnSettings"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("9")
expand_mode = 1

[node name="areaControl" type="Area2D" parent="Main/CanvasLayer/sideBoard"]
position = Vector2(175, 540)
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Main/CanvasLayer/sideBoard/areaControl"]
position = Vector2(175, 0)
shape = SubResource("7")

[node name="settingsContainer" type="VBoxContainer" parent="Main/CanvasLayer/sideBoard"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = -50.0
script = ExtResource("11")

[node name="closeConfirmationCheck" type="CheckButton" parent="Main/CanvasLayer/sideBoard/settingsContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("12")
text = "Confirm close"

[node name="btnQuit" type="Button" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -233.0
offset_top = -69.0
offset_right = -10.0
offset_bottom = -10.0
focus_mode = 0
theme = ExtResource("3_1gbg4")
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 42
text = "Quit [q]"
flat = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="btnQuit"]
visible = false
layout_mode = 0
offset_left = 143.0
offset_top = 56.0
offset_right = 213.0
offset_bottom = 61.0
nine_patch_stretch = true
texture_progress = ExtResource("13")

[node name="Timer" type="Timer" parent="btnQuit"]
wait_time = 0.5

[node name="animPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_black"
libraries = {
"": SubResource("AnimationLibrary_v8ojb")
}

[node name="Restart" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1080.0
offset_bottom = 1080.0
script = ExtResource("15")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="Restart"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -346.5
offset_top = -174.0
offset_right = 353.5
offset_bottom = 176.0
pivot_offset = Vector2(350, 175)
color = Color(0.85098, 0, 0, 1)

[node name="labelGameOver" type="Label" parent="Restart/ColorRect"]
layout_mode = 0
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 96.0
theme = ExtResource("3_1gbg4")
theme_override_font_sizes/font_size = 60
text = "GAME OVER!"
horizontal_alignment = 1

[node name="labelReason" type="Label" parent="Restart/ColorRect"]
visible = false
layout_mode = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -64.0
offset_bottom = -22.0
theme = ExtResource("3_1gbg4")
theme_override_font_sizes/font_size = 45
text = "You died!"

[node name="labelScore" type="Label" parent="Restart/ColorRect"]
layout_mode = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 4.0
offset_bottom = 46.0
theme = ExtResource("3_1gbg4")
theme_override_font_sizes/font_size = 32
text = "Score: N/A"
horizontal_alignment = 1

[node name="btnRestart" type="Button" parent="Restart/ColorRect"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.5
offset_top = -79.5
offset_right = 246.5
offset_bottom = -19.5
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource("3_1gbg4")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("16")
theme_override_styles/hover = SubResource("12")
theme_override_styles/pressed = SubResource("13")
theme_override_styles/disabled = SubResource("15")
theme_override_styles/focus = SubResource("14")
shortcut = SubResource("19")
shortcut_in_tooltip = false
text = "restart [r]"

[node name="btnETMenu" type="Button" parent="Restart/ColorRect"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -345.5
offset_top = -79.5
offset_right = -19.5
offset_bottom = -19.5
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource("3_1gbg4")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("16")
theme_override_styles/hover = SubResource("20")
theme_override_styles/pressed = SubResource("21")
theme_override_styles/disabled = SubResource("23")
theme_override_styles/focus = SubResource("22")
shortcut = SubResource("25")
shortcut_in_tooltip = false
text = "exit to menu [e]"

[node name="ColorRect2" type="ColorRect" parent="Restart"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
mouse_default_cursor_shape = 4
color = Color(0, 0, 0, 0)
metadata/_edit_lock_ = true

[node name="animPlayer" type="AnimationPlayer" parent="Restart"]
libraries = {
"": SubResource("AnimationLibrary_qdp46")
}

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="camera" type="Camera2D" parent="."]
anchor_mode = 0

[connection signal="mouse_entered" from="Main/CanvasLayer/sideBoard/btnSettings" to="Main/CanvasLayer/sideBoard" method="_on_btn_settings_mouse_entered"]
[connection signal="mouse_exited" from="Main/CanvasLayer/sideBoard/btnSettings" to="Main/CanvasLayer/sideBoard" method="_on_btn_settings_mouse_exited"]
[connection signal="area_shape_entered" from="Main/CanvasLayer/sideBoard/areaControl" to="Main/CanvasLayer/sideBoard" method="_on_areaControl_area_shape_entered"]
[connection signal="area_shape_exited" from="Main/CanvasLayer/sideBoard/areaControl" to="Main/CanvasLayer/sideBoard" method="_on_areaControl_area_shape_exited"]
[connection signal="toggled" from="Main/CanvasLayer/sideBoard/settingsContainer/closeConfirmationCheck" to="Main/CanvasLayer/sideBoard/settingsContainer" method="_on_closeConfirmationCheck_toggled"]
[connection signal="pressed" from="btnQuit" to="." method="_on_btnQuit_pressed"]
[connection signal="timeout" from="btnQuit/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Restart/ColorRect/btnRestart" to="Restart" method="_on_btnRestart_pressed"]
[connection signal="pressed" from="Restart/ColorRect/btnETMenu" to="Restart" method="_on_btnETMenu_pressed"]
